--- a/covid19_mph.Rmd
+++ b/covid19_mph.Rmd
@@ -5,13 +5,13 @@ author: |
   | Associate Professor (Epidemiology and Statistics)
 date: "`r Sys.Date()`"
 output:
-  html_document:
-     theme: united
-     highlight: tango
-     toc: yes
-     toc_depth: '3'
-     toc_float: yes
-     number_sections: true
+  html_document: 
+    theme: united
+    highlight: tango
+    toc: yes
+    toc_float: yes
+    number_sections: yes
+    keep_md: yes
   pdf_document:
     number_sections: yes
     toc: yes
